# POCO-Buidl_Project

./: CMakeLists.txt  Point-To-do.txt  README.md
src/: CMx_BaseSocket.cpp  CMx_BaseSocket.h  CMx_Non_Securesocket.cpp  CMx_Non_Securesocket.h  Mx_BaseSocket.cpp  Mx_BaseSocket.h  Mx_Defines.h  Mx_ErrorCodes.h  Mx_Non_Securesocket.cpp  Mx_Non_Securesocket.h  Mx_SecureSocket.cpp  Mx_SecureSocket.h  SSLHandler.cpp  SSLHandler.h  main.cpp  mx_types.h
